[gd_scene load_steps=37 format=3 uid="uid://b3si8pm36ie1w"]

[ext_resource type="Script" path="res://script/protagotemp.gd" id="1_qo61a"]
[ext_resource type="Script" path="res://addons/Time Rewinder/rewinder.gd" id="2_j8ym0"]
[ext_resource type="Texture2D" uid="uid://dnu3mk4nvthyv" path="res://assets/alemaoagachadoandando.png" id="2_v47lt"]
[ext_resource type="Texture2D" uid="uid://c5uqj4r61yptd" path="res://assets/pixilart-sprite.png" id="3_jh53d"]
[ext_resource type="Script" path="res://addons/Time Rewinder/rewind_property.gd" id="3_wkc2x"]
[ext_resource type="Texture2D" uid="uid://bhj51084v861u" path="res://assets/sprite-alemao.png" id="4_a01xo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nycgb"]
atlas = ExtResource("2_v47lt")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_62q8j"]
atlas = ExtResource("2_v47lt")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uplol"]
atlas = ExtResource("3_jh53d")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_odxjn"]
atlas = ExtResource("3_jh53d")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bpt83"]
atlas = ExtResource("4_a01xo")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_djvxt"]
atlas = ExtResource("4_a01xo")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6nt27"]
atlas = ExtResource("4_a01xo")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh6aw"]
atlas = ExtResource("4_a01xo")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_dsx1d"]
atlas = ExtResource("4_a01xo")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_snpio"]
atlas = ExtResource("4_a01xo")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_nhl6o"]
atlas = ExtResource("4_a01xo")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_v14tl"]
atlas = ExtResource("4_a01xo")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kiix"]
atlas = ExtResource("4_a01xo")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_67qe8"]
atlas = ExtResource("4_a01xo")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_710t5"]
atlas = ExtResource("4_a01xo")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_kbvsy"]
atlas = ExtResource("4_a01xo")
region = Rect2(1100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hycle"]
atlas = ExtResource("4_a01xo")
region = Rect2(1200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_8gaui"]
atlas = ExtResource("4_a01xo")
region = Rect2(1300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnl1s"]
atlas = ExtResource("4_a01xo")
region = Rect2(1400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8fyc"]
atlas = ExtResource("4_a01xo")
region = Rect2(1500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cmjo"]
atlas = ExtResource("4_a01xo")
region = Rect2(1600, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_u46o1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nycgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_62q8j")
}],
"loop": true,
"name": &"down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uplol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odxjn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpt83")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djvxt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6nt27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh6aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dsx1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_snpio")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nhl6o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v14tl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kiix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67qe8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_710t5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kbvsy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hycle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8gaui")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnl1s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8fyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cmjo")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v71vw"]
size = Vector2(33, 80.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sq45q"]
size = Vector2(33, 40)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2j33s"]
size = Vector2(26, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2bnxi"]
size = Vector2(299, 121.5)

[sub_resource type="Resource" id="Resource_hg8ky"]
script = ExtResource("3_wkc2x")
node_path = NodePath("..")
property_name = "position"
time_saved = 15.0

[sub_resource type="Resource" id="Resource_2m1q1"]
script = ExtResource("3_wkc2x")
node_path = NodePath("../protaspritemp")
property_name = "frame"
time_saved = 15.0

[sub_resource type="Resource" id="Resource_tlgqa"]
script = ExtResource("3_wkc2x")
node_path = NodePath("../protaspritemp")
property_name = "animation"
time_saved = 15.0

[sub_resource type="Resource" id="Resource_1bfc0"]
script = ExtResource("3_wkc2x")
node_path = NodePath("../protaspritemp")
property_name = "flip_h"
time_saved = 15.0

[node name="protagotemp" type="CharacterBody2D" groups=["protagonista"]]
script = ExtResource("1_qo61a")

[node name="protaspritemp" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(16, 24)
sprite_frames = SubResource("SpriteFrames_u46o1")
animation = &"walk"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(16.5, 40.75)
shape = SubResource("RectangleShape2D_v71vw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(16.5, 61)
shape = SubResource("RectangleShape2D_sq45q")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="attesq" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attesq"]
position = Vector2(-17, 36)
shape = SubResource("RectangleShape2D_2j33s")
disabled = true

[node name="attdir" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="attdir"]
position = Vector2(51, 36)
shape = SubResource("RectangleShape2D_2j33s")
disabled = true

[node name="paralisar" type="Area2D" parent="."]

[node name="CollisionShape2D3" type="CollisionShape2D" parent="paralisar"]
position = Vector2(17, 8.75)
shape = SubResource("RectangleShape2D_2bnxi")
disabled = true

[node name="tempdacel" type="Timer" parent="."]
wait_time = 5.0

[node name="attesqti" type="Timer" parent="."]
wait_time = 0.5

[node name="attdirti" type="Timer" parent="."]
wait_time = 0.5

[node name="Time Rewinder" type="Node" parent="."]
script = ExtResource("2_j8ym0")
rewind_resources = Array[ExtResource("3_wkc2x")]([SubResource("Resource_hg8ky"), SubResource("Resource_2m1q1"), SubResource("Resource_tlgqa"), SubResource("Resource_1bfc0")])

[node name="tempodepoder" type="Timer" parent="."]
wait_time = 3.0

[node name="temppoderpar" type="Timer" parent="."]
wait_time = 3.0

[connection signal="body_entered" from="attesq" to="." method="_on_attesq_body_entered"]
[connection signal="body_entered" from="attdir" to="." method="_on_attdir_body_entered"]
[connection signal="body_entered" from="paralisar" to="." method="_on_paralisar_body_entered"]
[connection signal="timeout" from="tempdacel" to="." method="_on_tempdacel_timeout"]
[connection signal="timeout" from="attesqti" to="." method="_on_attesqti_timeout"]
[connection signal="timeout" from="attdirti" to="." method="_on_attdirti_timeout"]
[connection signal="done_rewinding" from="Time Rewinder" to="." method="_on_time_rewinder_done_rewinding"]
[connection signal="timeout" from="tempodepoder" to="." method="_on_tempodepoder_timeout"]
[connection signal="timeout" from="temppoderpar" to="." method="_on_temppoderpar_timeout"]
